# Progetto-Finale

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  database.py  main.py  models.py  services.py  test_services.py
backend/src/text_to_sql/: __init__.py  prompts.py  translator.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: __init__.py  main.py
frontend/static/: style.css
frontend/templates/: index.html
mariadb/mariadb_init/: init.sql
ollama/: Dockerfile
ollama/scripts/: entrypoint.sh  fix_permission.sh
