[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Frontend service for the text-to-sql application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
# Dipendenza specifica per il frontend per renderizzare i template HTML
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"